# lua51

./: .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: ModuleCompileOptions.cmake  cmake_uninstall.cmake
include/: lua51_module.h  luaconf.h
test/: lua51test.cpp
