cmake_minimum_required(VERSION 3.2)

PROJECT(lua51)
INCLUDE(cmake/ModuleImport.cmake)
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(LUA51_VERSION_MAJOR "1")
SET(LUA51_VERSION_MINOR "0")
SET(LUA51_VERSION_PATCH "1")
SET(LUA51_VERSION "${LUA51_VERSION_MAJOR}.${LUA51_VERSION_MINOR}.${LUA51_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${LUA51_VERSION}")

ADD_DEFINITIONS(-DUSE_LUA51)
ADD_DEFINITIONS(-DLUA_COMPAT_MODULE -DLUA_COMPAT_APIINTCASTS)
OPTION(USE_LUA51_INNER "use lua inner" ON)
OPTION(USE_LUA51_TEST "use lua51 test" ON)

#ModuleImport("dmlog" "thirdparty/dmlog")

IF (WIN32)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/windows)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/test)

IF (USE_LUA51_TEST)
    FILE(GLOB DMLUA_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
    )

    LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "lua.c$")
    LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "luac.c$")
    LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "wmain.c$")

    FILE(GLOB LUA_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua.c
    )
ENDIF(USE_LUA51_TEST)


FILE(GLOB LUA51_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/include/*.h

${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
)

IF (WIN32)
    LIST(APPEND LUA51_SOURCES)
ENDIF(WIN32)

FILE(GLOB_RECURSE LUA51TEST_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/test/*.c
${CMAKE_CURRENT_SOURCE_DIR}/test/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.h)

IF (WIN32)
    IF (USE_LUA51_INNER)
        ADD_LIBRARY(lua51 SHARED ${DMLUA_SOURCES})
        SET_TARGET_PROPERTIES(lua51 PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_CORE")
        
        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua51)
    ENDIF(USE_LUA51_INNER)

    ADD_LIBRARY(lua51 SHARED ${LUA51_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/src/lua51/lua51_module.def)
    TARGET_LINK_LIBRARIES(lua51 lua51)

    SET_TARGET_PROPERTIES(lua51 PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_LIB")

    IF (USE_LUA51_TEST)
        ADD_EXECUTABLE(lua51test ${LUA51TEST_SOURCES})
        TARGET_LINK_LIBRARIES(lua51test lua51)
        SET_TARGET_PROPERTIES(lua51test PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL")
    ENDIF(USE_LUA51_TEST)

ELSEIF (APPLE)
    ADD_DEFINITIONS(-DLUA_USE_MACOSX)
    IF (USE_LUA51_INNER)
        ADD_LIBRARY(lua51 SHARED ${DMLUA_SOURCES})
        SET_TARGET_PROPERTIES(lua51 PROPERTIES LINK_FLAGS "-Wl,-undefined -Wl,dynamic_lookup")
        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua51 dl)
    ENDIF(USE_LUA51_INNER)

    ADD_LIBRARY(lua51 SHARED ${LUA51_SOURCES})
    SET_TARGET_PROPERTIES(lua51 PROPERTIES LINK_FLAGS "-Wl,-undefined -Wl,dynamic_lookup")

    IF (USE_LUA51_TEST)
        ADD_EXECUTABLE(lua51test ${LUA51TEST_SOURCES})
        TARGET_LINK_LIBRARIES(lua51test lua51)
        SET_TARGET_PROPERTIES(lua51test PROPERTIES LINK_FLAGS "-Wl,-undefined -Wl,dynamic_lookup")
    ENDIF(USE_LUA51_TEST)   
ELSEIF (UNIX)
    ADD_DEFINITIONS(-DLUA_USE_LINUX)

    IF (USE_LUA51_INNER)
        ADD_LIBRARY(lua51 SHARED ${DMLUA_SOURCES})
        SET_TARGET_PROPERTIES(lua51 PROPERTIES COMPILE_FLAGS "-Wl,-E" )
        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua51 m dl)
    ENDIF(USE_LUA51_INNER)

    ADD_LIBRARY(lua51 SHARED ${LUA51_SOURCES})
    SET_TARGET_PROPERTIES(lua51 PROPERTIES COMPILE_FLAGS "-Wl,-E" )
    SET_TARGET_PROPERTIES(lua51 PROPERTIES PREFIX "")
    
    IF (USE_LUA51_TEST)
        ADD_EXECUTABLE(lua51test ${LUA51TEST_SOURCES})
        TARGET_LINK_LIBRARIES(lua51test lua51)
    ENDIF(USE_LUA51_TEST)   
ENDIF ()

#ADD_CUSTOM_COMMAND(
#TARGET lua51test
#PRE_BUILD
#COMMAND ${CMAKE_COMMAND} -E copy_if_different
#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
#$<TARGET_FILE_DIR:lua51test>
#)

#INSTALL(DIRECTORY include/ DESTINATION include)
#INSTALL(TARGETS lua51
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#SET(LUA51_LIBS "lua51")
#MARK_AS_ADVANCED(${LUA51_LIBS})
